<resources>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_you_haven_t_an_account">Do you haven\'t an account?</string>
    <string name="options">Options</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="bookmark">Bookmark</string>
</resources>